force-app/main/default/objects/Request__c/Request__c.object-meta.xml
<CustomObject>
    <description>This object will handle requests sales needs to make to other groups at NI.  The request is in order to fulfill addtional information needs to complete a proposal.  Initially it will be used for SE, Report Services, CAD Services and Data Services requests, but could be extended beyond that.</description>
    <label>Request</label>
    <nameField>
        <displayFormat>REQ-{MM}{DD}{YY}-{000}</displayFormat>
        <label>Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>