force-app/main/default/objects/Request__c/fields/Accelerated_Request__c.field-meta.xml
<CustomField>
    <fullName>Accelerated_Request__c</fullName>
    <businessOwnerUser>adavid.robinson@amadeus.com</businessOwnerUser>
    <defaultValue>false</defaultValue>
    <description>NICC-057029</description>
    <inlineHelpText>Indicates this Request has been accelerated. Will fire the Flow called “Request - OM Accelerated Request Email”.</inlineHelpText>
    <label>Accelerated Request</label>
    <type>Checkbox</type>
</CustomField>