force-app/main/default/objects/Request__c/fields/AdPiler_URL__c.field-meta.xml
<CustomField>
    <fullName>AdPiler_URL__c</fullName>
    <description>NICC-057703</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AdPiler URL</label>
    <type>Url</type>
</CustomField>