force-app/main/default/objects/Request__c/fields/AH_DeliveryComments__c.field-meta.xml
<CustomField>
    <fullName>AH_DeliveryComments__c</fullName>
    <description>NICC-064483</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Delivery Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>