force-app/main/default/objects/Request__c/fields/AH_OpportunityAmount__c.field-meta.xml
<CustomField>
    <fullName>AH_OpportunityAmount__c</fullName>
    <description>NICC-061648</description>
    <formula>Related_Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the Amount from the related Opportunity</inlineHelpText>
    <label>Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>