force-app/main/default/objects/Request__c/fields/AH_OpportunityOrderStatus__c.field-meta.xml
<CustomField>
    <fullName>AH_OpportunityOrderStatus__c</fullName>
    <businessOwnerUser>adavid.robinson@amadeus.com</businessOwnerUser>
    <description>NICC-061648</description>
    <formula>TEXT( Related_Opportunity__r.Order_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the Order Status from the related Opportunity</inlineHelpText>
    <label>Opportunity Order Status</label>
    <type>Text</type>
</CustomField>