force-app/main/default/objects/Request__c/fields/AH_QC_Specialist__c.field-meta.xml
<CustomField>
    <fullName>AH_QC_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-060915</description>
    <inlineHelpText>User who is the designated QC Specialist for this Request</inlineHelpText>
    <label>QC Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>