force-app/main/default/objects/Request__c/fields/Booking_Engine_Look_Feel__c.field-meta.xml
<CustomField>
    <fullName>Booking_Engine_Look_Feel__c</fullName>
    <description>NICC-064110</description>
    <label>Booking Engine Look &amp; Feel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BE4</fullName>
            </value>
            <value>
                <fullName>BE5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>