force-app/main/default/objects/Request__c/fields/Business_Reason__c.field-meta.xml
<CustomField>
    <fullName>Business_Reason__c</fullName>
    <businessOwnerUser>abencivenga@newmarketinc.com.sbfull</businessOwnerUser>
    <description>NICC-053801</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Describe the business reason for this request.</inlineHelpText>
    <label>Business Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>