force-app/main/default/objects/Request__c/fields/Close_Time__c.field-meta.xml
<CustomField>
    <fullName>Close_Time__c</fullName>
    <businessOwnerUser>adavid.robinson@amadeus.com.sbfull</businessOwnerUser>
    <description>NICC-051009</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date/Time the Request was Closed</inlineHelpText>
    <label>Close Time</label>
    <type>DateTime</type>
</CustomField>