force-app/main/default/objects/Request__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <businessOwnerUser>adavid.robinson@amadeus.com.sbfull</businessOwnerUser>
    <description>NICC-051009</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>