force-app/main/default/objects/Request__c/fields/Enhancement_Department_Priority__c.field-meta.xml
<CustomField>
    <fullName>Enhancement_Department_Priority__c</fullName>
    <businessOwnerUser>abencivenga@newmarketinc.com.sbfull</businessOwnerUser>
    <description>NICC-053801; Used for enhancement&apos;s only and defines the department&apos;s priority of the request</description>
    <inlineHelpText>Used for enhancement&apos;s only and defines the department&apos;s priority of the request</inlineHelpText>
    <label>Enhancement Department Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>