force-app/main/default/objects/Request__c/fields/Escalation__c.field-meta.xml
<CustomField>
    <fullName>Escalation__c</fullName>
    <businessOwnerUser>adavid.robinson@amadeus.com</businessOwnerUser>
    <defaultValue>false</defaultValue>
    <description>NICC-059578</description>
    <label>Escalation</label>
    <type>Checkbox</type>
</CustomField>