force-app/main/default/objects/Request__c/fields/Location_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Contact__c</fullName>
    <description>User to pick their location for the team to know when to reach out based on time zone differences.</description>
    <inlineHelpText>Please choose your location to provide time zone information for the team member working your request.</inlineHelpText>
    <label>Location of Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>APAC Remote</fullName>
            </value>
            <value>
                <fullName>Barcelona</fullName>
            </value>
            <value>
                <fullName>EMEA Remote</fullName>
            </value>
            <value>
                <fullName>Manila</fullName>
            </value>
            <value>
                <fullName>Melbourne</fullName>
            </value>
            <value>
                <fullName>NORAM Remote</fullName>
            </value>
            <value>
                <fullName>Orlando</fullName>
            </value>
            <value>
                <fullName>Portsmouth</fullName>
            </value>
            <value>
                <fullName>San Jose</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>