force-app/main/default/objects/Request__c/fields/MSD_Ticket__c.field-meta.xml
<CustomField>
    <fullName>MSD_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to MSD if applicable.</inlineHelpText>
    <label>MSD Ticket</label>
    <referenceTo>MSD_Ticket__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>