force-app/main/default/objects/Request__c/fields/Number_of_Follow_Ups__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Follow_Ups__c</fullName>
    <businessOwnerUser>adavid.robinson@amadeus.com.sbfull</businessOwnerUser>
    <description>NICC-057029</description>
    <inlineHelpText>Number of times a follow up has been attempted for this Request</inlineHelpText>
    <label>Number of Follow Ups</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>