force-app/main/default/objects/Request__c/fields/Number_of_Languages__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Languages__c</fullName>
    <businessOwnerUser>lorie.park@amadeus.com</businessOwnerUser>
    <description>NICC-057703</description>
    <inlineHelpText>Number of Languages needed for RES/iH Creative Requests</inlineHelpText>
    <label>Number of Languages</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>