force-app/main/default/objects/Request__c/fields/Prior_Status_Value__c.field-meta.xml
<CustomField>
    <fullName>Prior_Status_Value__c</fullName>
    <businessOwnerUser>kcontreraz@newmarketinc.com.sbfull</businessOwnerUser>
    <description>NICC-051009</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field is used in the lightning process called &quot;OM Request Status Tracking&quot; and is used to aid in determining how long a record stays in a particular status. This field should not live not he page layout nor be updated by anyone other than the process.</inlineHelpText>
    <label>Prior Status Value</label>
    <length>200</length>
    <type>Text</type>
</CustomField>