force-app/main/default/objects/Request__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>NICC-051009; updated via NICC-054214</description>
    <inlineHelpText>Designates the Priority of the Request</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Correction</fullName>
            </value>
            <value>
                <fullName>Urgent</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>