force-app/main/default/objects/Request__c/fields/PS_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>PS_Request_Type__c</fullName>
    <businessOwnerGroup>Business_Systems_Internal</businessOwnerGroup>
    <description>This type has been customized for Professional Services request</description>
    <label>Delivery Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom Services Quote</fullName>
                <default>true</default>
                <label>Custom Services Quote</label>
            </value>
            <value>
                <fullName>Change Order</fullName>
            </value>
            <value>
                <fullName>Customer Engagement</fullName>
            </value>
            <value>
                <fullName>Project Office Requests</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>