force-app/main/default/objects/Request__c/fields/QC_Non_Critical_Error_Category__c.field-meta.xml
<CustomField>
    <fullName>QC_Non_Critical_Error_Category__c</fullName>
    <businessOwnerUser>adavid.robinson@amadeus.com.sbfull</businessOwnerUser>
    <description>NICC-051009; updated via NICC-059046</description>
    <label>Primary Non-Critical Error</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Non_Critical_Error_Category</valueSetName>
    </valueSet>
</CustomField>