force-app/main/default/objects/Request__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <businessOwnerUser>adavid.robinson@amadeus.com</businessOwnerUser>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>R00N30000001HA2jEAG</relationshipName>
    <type>Lookup</type>
</CustomField>