force-app/main/default/objects/Request__c/fields/Related_Opportunity_URL__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity_URL__c</fullName>
    <businessOwnerUser>adavid.robinson@amadeus.com</businessOwnerUser>
    <description>NICC-051009</description>
    <formula>HYPERLINK(&quot;https://amadeus-hospitality.lightning.force.com/lightning/r/Opportunity/&quot; &amp; Related_Opportunity__r.Id &amp; &quot;/view&quot;, Related_Opportunity__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the link to a related Opportunity for use on Email Templates</inlineHelpText>
    <label>Related Opportunity URL</label>
    <type>Text</type>
</CustomField>