force-app/main/default/objects/Request__c/fields/Request_Contact__c.field-meta.xml
<CustomField>
    <fullName>Request_Contact__c</fullName>
    <businessOwnerUser>adavid.robinson@amadeus.com</businessOwnerUser>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-051009</description>
    <inlineHelpText>User who is the main contact for answering questions related to this Request</inlineHelpText>
    <label>Request Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>