force-app/main/default/objects/Request__c/fields/Request_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Request_Contact_Role__c</fullName>
    <businessOwnerUser>adavid.robinson@amadeus.com.sbfull</businessOwnerUser>
    <description>NICC-051009</description>
    <formula>Request_Contact__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the Role from the Request Contact&apos;s User record</inlineHelpText>
    <label>Request Contact Role</label>
    <type>Text</type>
</CustomField>