force-app/main/default/objects/Request__c/fields/Request_Details__c.field-meta.xml
<CustomField>
    <fullName>Request_Details__c</fullName>
    <businessOwnerUser>abencivenga@newmarketinc.com.sbfull</businessOwnerUser>
    <description>NICC-053801</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please provide a detailed description of your request</inlineHelpText>
    <label>Request Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>