force-app/main/default/objects/Request__c/fields/Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Request_Status__c</fullName>
    <label>Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Backlog</fullName>
            </value>
            <value>
                <fullName>Acknowledged</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Pending External Team</fullName>
            </value>
            <value>
                <fullName>Awaiting Information</fullName>
            </value>
            <value>
                <fullName>Pending QA</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Closed - Contract Processed</fullName>
            </value>
            <value>
                <fullName>Closed - Incorrect Mailbox</fullName>
            </value>
            <value>
                <fullName>Closed - Info/Admin Opty Processed</fullName>
            </value>
            <value>
                <fullName>Closed - Unresolved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>SPAM</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Waiting on internal</fullName>
            </value>
            <value>
                <fullName>Closed Blocked</fullName>
            </value>
            <value>
                <fullName>Closed Cancelled</fullName>
            </value>
            <value>
                <fullName>Closed Fulfilled</fullName>
            </value>
            <value>
                <fullName>Close Duplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>