force-app/main/default/objects/Request__c/fields/Request_Title__c.field-meta.xml
<CustomField>
    <fullName>Request_Title__c</fullName>
    <businessOwnerUser>abencivenga@newmarketinc.com.sbfull</businessOwnerUser>
    <description>NICC-053801; The name of the request</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Request Title</label>
    <length>120</length>
    <type>Text</type>
</CustomField>