force-app/main/default/objects/Request__c/fields/Request_URL__c.field-meta.xml
<CustomField>
    <fullName>Request_URL__c</fullName>
    <businessOwnerUser>kcontreraz@newmarketinc.com</businessOwnerUser>
    <description>NICC-054015</description>
    <formula>LEFT($Api.Enterprise_Server_URL_510, FIND( &apos;/services&apos;, $Api.Enterprise_Server_URL_510)) &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use in email templates to dynamically display the URL of the Request record.</inlineHelpText>
    <label>Request URL</label>
    <type>Text</type>
</CustomField>