force-app/main/default/objects/Request__c/fields/Requested_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Completion_Date__c</fullName>
    <businessOwnerUser>abencivenga@newmarketinc.com</businessOwnerUser>
    <description>NICC-053801</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please indicate the requested completion date.</inlineHelpText>
    <label>Requested Completion Date</label>
    <type>Date</type>
</CustomField>