force-app/main/default/objects/Request__c/fields/Secondary_Critical_Error__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Critical_Error__c</fullName>
    <businessOwnerUser>adavid.robinson@amadeus.com</businessOwnerUser>
    <description>NICC-059046</description>
    <label>Secondary Critical Error</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Critical_Error_Category</valueSetName>
    </valueSet>
</CustomField>