force-app/main/default/objects/Request__c/fields/Tertiary_Critical_Error__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Critical_Error__c</fullName>
    <businessOwnerUser>adavid.robinson@amadeus.com.sbfull</businessOwnerUser>
    <description>NICC-059046</description>
    <label>Tertiary Critical Error</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Critical_Error_Category</valueSetName>
    </valueSet>
</CustomField>