force-app/main/default/objects/Request__c/fields/Tertiary_Reason__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Reason__c</fullName>
    <description>NICC-053437</description>
    <label>Tertiary Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reasons_for_Delay</valueSetName>
    </valueSet>
</CustomField>