force-app/main/default/objects/Request__c/fields/Total_Time_Elapsed__c.field-meta.xml
<CustomField>
    <fullName>Total_Time_Elapsed__c</fullName>
    <description>NICC-057681</description>
    <formula>IF(
  Close_Time__c - Open_Time__c &gt; 0 ,
  TEXT( FLOOR( Close_Time__c - Open_Time__c ) ) &amp; &quot; days &quot;
  &amp; TEXT( FLOOR( MOD( (Close_Time__c - Open_Time__c ) * 24, 24 ) ) ) &amp; &quot; hrs &quot;
  &amp; TEXT( ROUND( MOD( (Close_Time__c - Open_Time__c ) * 24 * 60, 60 ), 0 ) ) &amp; &quot; min&quot;,
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the total time elapsed between Open Time and Close Time</inlineHelpText>
    <label>Total Time Elapsed (hh:mm)</label>
    <type>Text</type>
</CustomField>