force-app/main/default/objects/Request__c/fields/TotalTime9HrRollup__c.field-meta.xml
<CustomField>
    <fullName>TotalTime9HrRollup__c</fullName>
    <businessOwnerUser>adavid.robinson@amadeus.com</businessOwnerUser>
    <description>NICC-051009</description>
    <inlineHelpText>This field shows the total Time elapsed for all Status Tracking records attached, based on a 9 hour business day, unless the Status = Awaiting Information or Pending QA or any Closed statuses</inlineHelpText>
    <label>Total Time (9 hr day, rollup summary)</label>
    <summarizedField>Status_Tracking__c.Time_Elapsed_Hours_8hr_day__c</summarizedField>
    <summaryFilterItems>
        <field>Status_Tracking__c.Status_Name__c</field>
        <operation>notEqual</operation>
        <value>Awaiting Information, Pending QA</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Status_Tracking__c.Status_Name__c</field>
        <operation>notContain</operation>
        <value>Closed</value>
    </summaryFilterItems>
    <summaryForeignKey>Status_Tracking__c.OM_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>