force-app/main/default/objects/Request__c/recordTypes/Contract_Request.recordType-meta.xml
<RecordType>
    <fullName>Contract_Request</fullName>
    <active>true</active>
    <description>Order Management Contract Request</description>
    <label>Contract Request</label>
</RecordType>