force-app/main/default/objects/Request__c/recordTypes/Contract_Validation_Request.recordType-meta.xml
<RecordType>
    <fullName>Contract_Validation_Request</fullName>
    <active>true</active>
    <description>Order Management Contract Validation Request</description>
    <label>Contract Validation Request</label>
</RecordType>