force-app/main/default/objects/Request__c/recordTypes/Creative_Request.recordType-meta.xml
<RecordType>
    <fullName>Creative_Request</fullName>
    <active>true</active>
    <label>Creative Request</label>
</RecordType>