force-app/main/default/objects/Request__c/recordTypes/Professional_Service_Request.recordType-meta.xml
<RecordType>
    <fullName>Professional_Service_Request</fullName>
    <active>true</active>
    <description>Used for internal communication between Commercial (Sales), Order Management/Contract Support and Customer Delivery/Customer Success for specific use cases</description>
    <label>Delivery Request</label>
</RecordType>