force-app/main/default/objects/Request__c/recordTypes/SERequest.recordType-meta.xml
<RecordType>
    <fullName>SERequest</fullName>
    <active>true</active>
    <description>Systems Engineering Request</description>
    <label>SE Request</label>
</RecordType>