force-app/main/default/objects/Request__c/recordTypes/Shared_Services_Request.recordType-meta.xml
<RecordType>
    <fullName>Shared_Services_Request</fullName>
    <active>true</active>
    <label>Shared Services Request</label>
</RecordType>