force-app/main/default/objects/Request__c/recordTypes/Support_Global_Ops_Request.recordType-meta.xml
<RecordType>
    <fullName>Support_Global_Ops_Request</fullName>
    <active>true</active>
    <description>Customer Support Global Ops Request Record Type</description>
    <label>Support Global Ops Request</label>
</RecordType>