force-app/main/default/objects/Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Request_Title__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Request_Contact__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>