force-app/main/default/objects/Request__c/listViews/Contract_Requests_Pending_QC.listView-meta.xml
<ListView>
    <fullName>Contract_Requests_Pending_QC</fullName>
    <columns>NAME</columns>
    <columns>Open_Time__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Request_Type__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Request_Contact__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Related_Opportunity__c</columns>
    <columns>Reason_for_Delay__c</columns>
    <columns>Request_Contact_Role__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>Pending QA</value>
    </filters>
    <label>Contract Requests Pending QC</label>
    <sharedTo>
        <roleAndSubordinatesInternal>ContractsAdministrator</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>