force-app/main/default/objects/Request__c/listViews/Copy_of_My_open_validation_requests.listView-meta.xml
<ListView>
    <fullName>Copy_of_My_open_validation_requests</fullName>
    <columns>NAME</columns>
    <columns>Open_Time__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Request_Contact__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Related_Opportunity__c</columns>
    <columns>Reason_for_Delay__c</columns>
    <columns>Request_Contact_Role__c</columns>
    <columns>Region__c</columns>
    <columns>Number_of_Follow_Ups__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Request__c.Contract_Request</value>
    </filters>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>New,Acknowledged,In Progress,Awaiting Information,Pending QA,QA Complete</value>
    </filters>
    <label>NMI OM My open contract Requests</label>
    <sharedTo>
        <roleAndSubordinates>ContractsAdministrator</roleAndSubordinates>
        <roleAndSubordinates>DirectorofContracts</roleAndSubordinates>
    </sharedTo>
</ListView>