force-app/main/default/objects/Request__c/listViews/Copy_of_Request_Waiting_on_Internal.listView-meta.xml
<ListView>
    <fullName>Copy_of_Request_Waiting_on_Internal</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>RECORDTYPE</columns>
    <columns>Request_Title__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Request_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>Closed,Closed - Contract Processed,Closed - Incorrect Mailbox,Closed - Info/Admin Opty Processed,Closed - Unresolved,Closed Blocked,Closed Cancelled,Closed Fulfilled,Close Duplicate</value>
    </filters>
    <label>Request - Closed</label>
</ListView>