force-app/main/default/objects/Request__c/listViews/Global_Ops_Backlog.listView-meta.xml
<ListView>
    <fullName>Global_Ops_Backlog</fullName>
    <columns>NAME</columns>
    <columns>Request_Title__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Enhancement_Department_Priority__c</columns>
    <columns>Request_Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Requested_Completion_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Request_Details__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>Backlog</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Request__c.Support_Global_Ops_Request</value>
    </filters>
    <label>Support Global Ops - Backlog</label>
</ListView>