force-app/main/default/objects/Request__c/listViews/Global_Ops_Requests_All.listView-meta.xml
<ListView>
    <fullName>Global_Ops_Requests_All</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Request_Title__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Priority__c</columns>
    <columns>Request_Contact__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Request__c.Support_Global_Ops_Request</value>
    </filters>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>New,Backlog,Acknowledged,In Progress,Pending External Team,Awaiting Information,Pending QA,Waiting on internal</value>
    </filters>
    <label>Global Ops Requests - All</label>
</ListView>