force-app/main/default/objects/Request__c/listViews/GlobalOps_Request_New.listView-meta.xml
<ListView>
    <fullName>GlobalOps_Request_New</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>RECORDTYPE</columns>
    <columns>Request_Status__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Request_Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>Request - New</label>
    <language>en_US</language>
</ListView>